# friendly-journey

./: .gitignore  CAPTURE.md  CONTRIBUTING.md  Cargo.toml  FINDINGS.md  Makefile  caves-perf.md  deny.toml  idea.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/voxel-cli/: Cargo.toml
crates/voxel-cli/src/: main.rs
crates/voxel-cli/tests/: cli.rs
crates/voxel-core/: Cargo.toml
crates/voxel-core/src/: coord.rs  dda.rs  fixtures.rs  layout.rs  leaf.rs  level.rs  lib.rs  measure.rs  mip.rs  mirror.rs  morton.rs  node.rs  noise.rs  occupancy.rs  oracle.rs  palette.rs  ray.rs  resolution.rs  school_b.rs  sparse.rs
crates/voxel-gpu/: Cargo.toml
crates/voxel-gpu/shaders/: hdda.wgsl  noise_core.wgsl  noise_gen.wgsl  noise_gen_bricks.wgsl  render.wgsl  render_truecolor.wgsl  render_truecolor_blend.wgsl  traversal.wgsl
crates/voxel-gpu/src/: buffers.rs  capture.rs  context.rs  error.rs  generate.rs  lib.rs  render.rs  traverse.rs
crates/voxel-gpu/tests/: differential.rs  material_render.rs  truecolor_render.rs
crates/voxel-viewer/: Cargo.toml
crates/voxel-viewer/shaders/: blit.wgsl  hud.wgsl
crates/voxel-viewer/src/: camera.rs  hud.rs  input.rs  main.rs
crates/voxel-viewer/tests/: exit_code.rs
crates/voxelizer/: Cargo.toml
crates/voxelizer/examples/: material_leaf_histogram.rs
crates/voxelizer/shaders/: compact.wgsl  compact_attrs.wgsl  compact_voxels.wgsl  voxelize.wgsl
crates/voxelizer/src/: appearance.rs  bake.rs  core.rs  csr.rs  error.rs  lib.rs  materials.rs  reference_cpu.rs  truecolor.rs
crates/voxelizer/src/gpu/: buffers.rs  compact_attrs.rs  compact_positions.rs  compact_voxels.rs  dense.rs  mod.rs  pipelines.rs  shaders.rs  sparse.rs
crates/voxelizer/src/io/: mod.rs
crates/voxelizer/src/io/export/: mod.rs
crates/voxelizer/src/io/import/: gltf.rs  mod.rs  obj.rs  stl.rs
crates/voxelizer/src/loader/: gltf.rs  mod.rs  obj.rs  stl.rs
crates/voxelizer/tests/: differential.rs  io_compute_boundary.rs  loader_robustness.rs  obj_robustness.rs  sparse_material_bridge.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
