[package]
name = "voxel-cli"
description = "Headless command-line driver: build the structure, run the §10 measurements, and diff the GPU path against the reference. Zero UI dependencies."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
# Application workspace, not a published library — never goes to crates.io. Also
# lets the supply-chain gate (`cargo xtask ci-deps`) accept the internal path deps.
publish = false

[[bin]]
name = "voxel"
path = "src/main.rs"

[dependencies]
voxel-core = { workspace = true }
voxel-gpu = { workspace = true }
voxelizer = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
