[package]
name = "voxel-core"
description = "Pure domain core for the sparse MIP voxel structure: domain types, the reference Amanatides-Woo oracle, the School-B builder, the stackless HDDA reference, and the GPU buffer contract. No GPU, no I/O, no windowing."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
# Application workspace, not a published library — never goes to crates.io. Also
# lets the supply-chain gate (`cargo xtask ci-deps`) accept the internal path deps.
publish = false

[dependencies]
thiserror = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
