[package]
name = "voxel-viewer"
description = "Optional interactive viewer (winit + wgpu surface) that renders ray hits. Holds the only windowing dependency in the workspace; the headless cli never depends on it."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "voxel-viewer"
path = "src/main.rs"

[dependencies]
voxel-core = { workspace = true }
voxel-gpu = { workspace = true }
voxelizer = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
pollster = { workspace = true }
clap = { workspace = true }
bytemuck = { workspace = true }

# Leaf data dependency (public-domain 8x8 bitmap font), local to this UI binary:
# pure const tables, no_std, no churn, no wgpu coupling — used only to build the
# HUD glyph atlas. Kept crate-local rather than hoisted into workspace.deps
# (Engineering Codex: Shared Dependencies — viewer-only deps stay local).
font8x8 = "0.3"

[lints]
workspace = true
