[package]
name = "voxelizer"
description = "Surface (conservative) mesh voxelizer: a wgpu compute path diffed against a CPU SAT reference oracle, emitting voxel-core occupancy for the renderer."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
voxel-core = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
thiserror = { workspace = true }
pollster = { workspace = true }

# Browser console logging for the wasm32 debug path (csr.rs). Native/macOS builds
# do not pull this in.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
proptest = { workspace = true }
glam = { workspace = true }   # construct test meshes (Vec3) in integration tests

[lints]
workspace = true
