[package]
name = "voxelizer"
description = "Surface (conservative) mesh voxelizer: a wgpu compute path diffed against a CPU SAT reference oracle, emitting voxel-core occupancy for the renderer."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
# Default-on so plain `cargo test`/`clippy` exercise both input adapters, but
# the heavy parsing dependencies are droppable via `--no-default-features` (the
# `loader` module gates out entirely). Each format gates its own optional dep,
# so `--features obj` (no glTF) and vice versa both compile independently.
default = ["gltf", "obj", "stl"]
gltf = ["dep:gltf"]
obj = ["dep:tobj", "dep:image"]
stl = ["dep:stl_io"]

[dependencies]
voxel-core = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
thiserror = { workspace = true }
pollster = { workspace = true }
gltf = { workspace = true, optional = true }
tobj = { workspace = true, optional = true }
image = { workspace = true, optional = true }
stl_io = { workspace = true, optional = true }

# Browser console logging for the wasm32 debug path (csr.rs). Native/macOS builds
# do not pull this in.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
proptest = { workspace = true }
glam = { workspace = true }   # construct test meshes (Vec3) in integration tests

[lints]
workspace = true
