[package]
name = "xtask"
description = "Workspace build automation: the `ci` (CPU floor) and `ci-gpu` (GPU-required) quality gates."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
